--- a/style.css
+++ b/style.css
@@ -127,7 +127,10 @@ h1{
   
     .left-panel,
     .right-panel {
+      flex: 1 1 100%;
       width: 100%;
+      min-width: 0;
+
     }
     .task-toolbar {
         align-items: stretch;
