--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ h1{
     .left-panel,
     .right-panel {
       flex: 1 1 100%;
-      width: 100%;
+      width: 100% !important;
       min-width: 0;
 
     }
